--- a/CronExpressionWeb/index.htm
+++ b/CronExpressionWeb/index.htm
@@ -3,39 +3,28 @@
 <head>
   <title>Be Cron - 在线Cron表达式生成器</title>
 	<meta name="description" content="通过这个生成器,您可以在线生成任务调度比如Quartz的Cron表达式,对Quartz Cron 表达式的可视化双向解析和生成." />
-	<meta name="keywords" content="cron creater,generate Cron Expression,Cron Expression online,Quartz Cron Expresssion,cron在线生成工具" />
+	<meta name="keywords" content="焰尾迭,cron creater,generate Cron Expression,Cron Expression online,Quartz Cron Expresssion,cron在线生成工具" />
 	<meta name="baidu-tc-cerfication" content="52031c379393b942ce0d59195791f366" />
     <link href="Cron/themes/bootstrap/easyui.min.css" rel="stylesheet" type="text/css" />
     <link href="Cron/themes/icon.css" rel="stylesheet" type="text/css" />
     <link href="Cron/icon.css" rel="stylesheet" type="text/css" />
+    <script src="Cron/jquery-1.6.2.min.js" type="text/javascript"></script>
+    <script src="Cron/jquery.easyui.min.js" type="text/javascript"></script>
+    <script src="Cron/cron.js" type="text/javascript"></script>
     <style type="text/css">
-        .line
-        {
-            height: 25px;
-            line-height: 25px;
-            margin: 3px;
-        }
-        .imp
-        {
-            padding-left: 25px;
-        }
-        .col
-        {
-            width: 95px;
-        }
-        ul {
-            list-style:none;
-            padding-left:10px;
-        }
-        li {
-            height:20px;
-        }
+        body {margin-left:auto;margin-right:auto;width:100%;}
+        .line{height: 25px;line-height: 25px;margin: 3px;}
+        .imp{padding-left: 25px;}
+        .col{width: 95px;}
+        ul {list-style:none;padding-left:10px;}
+        li {height:20px;}
+        #footer {color:#333333;font-size:13px;text-align:center;width:100%; background-color:rgb(236, 236, 236);height:35px;line-height:35px;position:absolute;bottom:0px;}
+        #footer a {color:#0088cc;text-decoration:none;}
     </style>
 </head>
 <body>
-    <center>
         <div class="easyui-layout" style="width:830px;height:560px; border: 1px rgb(202, 196, 196) solid;
-            border-radius: 5px;">
+            border-radius: 5px;margin-left:auto;margin-right:auto;">
             <div style="height: 100%;">
                 <div class="easyui-tabs" data-options="fit:true,border:false">
                     <div title="秒">
@@ -532,6 +521,7 @@
                         </tbody>
                     </table>
                 </fieldset>
+
                 <div style="text-align: center; margin-top: 5px;">
                     <script type="text/javascript">
                         /*killIe*/
@@ -702,9 +692,8 @@
             <div>
             </div>
         </div>
-    </center>
-    <script src="Cron/jquery-1.6.2.min.js" type="text/javascript"></script>
-    <script src="Cron/jquery.easyui.min.js" type="text/javascript"></script>
-    <script src="Cron/cron.js" type="text/javascript"></script>
+        <div id="footer">
+		在线工具 由 <a href="http://yanweidie.cnblogs.com/" target="_blank">焰尾迭</a> 所有 | <a href="http://wpa.qq.com/msgrd?v=3&amp;uin=353166224&amp;site=qq&amp;menu=yes" target="_blank"><img title="欢迎与我联系" align="absmiddle" alt="欢迎与我联系" src="http://wpa.qq.com/pa?p=2:272657997:41 &amp;r=0.30709030851721764" border="0"></a> |Email:<a href="mailto:353166224@qq.com">353166224@qq.com</a> |<a href="http://www.cnblogs.com/yanweidie/p/3537144.html" target="_blank">意见反馈</a> | <a href="http://www.miitbeian.gov.cn/" target="_blank">鄂ICP备14000498号-1</a> | <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://"); document.write(unescape("%3Cspan id='cnzz_stat_icon_1256338874'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s11.cnzz.com/stat.php%3Fid%3D1256338874%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));</script>
+        </div>
 </body>
 </html>
