--- a/CronExpressionWeb/index.htm
+++ b/CronExpressionWeb/index.htm
@@ -3,14 +3,14 @@
 <head>
   <title>Be Cron - 在线Cron表达式生成器</title>
 	<meta name="description" content="通过这个生成器,您可以在线生成任务调度比如Quartz的Cron表达式,对Quartz Cron 表达式的可视化双向解析和生成." />
-	<meta name="keywords" content="焰尾迭,cron creater,generate Cron Expression,Cron Expression online,Quartz Cron Expresssion,cron在线生成工具" />
+	<meta name="keywords" content="焰尾迭,cron表达式在线生成器,cron creater,generate Cron Expression,Cron Expression online,Quartz Cron Expresssion,cron在线生成工具" />
 	<meta name="baidu-tc-cerfication" content="52031c379393b942ce0d59195791f366" />
-    <link href="Cron/themes/bootstrap/easyui.min.css" rel="stylesheet" type="text/css" />
-    <link href="Cron/themes/icon.css" rel="stylesheet" type="text/css" />
-    <link href="Cron/icon.css" rel="stylesheet" type="text/css" />
-    <script src="Cron/jquery-1.6.2.min.js" type="text/javascript"></script>
-    <script src="Cron/jquery.easyui.min.js" type="text/javascript"></script>
-    <script src="Cron/cron.js" type="text/javascript"></script>
+    <link href="Css/themes/bootstrap/easyui.min.css" rel="stylesheet" type="text/css" />
+    <link href="Css/themes/icon.css" rel="stylesheet" type="text/css" />
+    <link href="Css/icon.css" rel="stylesheet" type="text/css" />
+    <script src="Css/jquery-1.6.2.min.js" type="text/javascript"></script>
+    <script src="Css/jquery.easyui.min.js" type="text/javascript"></script>
+    <script src="Css/cron.js" type="text/javascript"></script>
     <style type="text/css">
         body {margin-left:auto;margin-right:auto;width:100%;}
         .line{height: 25px;line-height: 25px;margin: 3px;}
@@ -18,12 +18,17 @@
         .col{width: 95px;}
         ul {list-style:none;padding-left:10px;}
         li {height:20px;}
-        #footer {color:#333333;font-size:13px;text-align:center;width:100%; background-color:rgb(236, 236, 236);height:35px;line-height:35px;position:absolute;bottom:0px;}
+        #footer {color:#333333;font-size:13px;text-align:center;width:100%; background-color:rgb(236, 236, 236);height:35px;line-height:35px;position:fixed;bottom:0px;top:auto;}
         #footer a {color:#0088cc;text-decoration:none;}
     </style>
+    <script type="text/javascript">
+         /*250*200 创建于 2015-09-16*/
+         var cpro_id = "u2313541";
+    </script>
+    <script src="http://cpro.baidustatic.com/cpro/ui/f.js" type="text/javascript"></script>
 </head>
 <body>
-        <div class="easyui-layout" style="width:830px;height:560px; border: 1px rgb(202, 196, 196) solid;
+        <div class="easyui-layout" style="width:830px;height:650px; border: 1px rgb(202, 196, 196) solid;
             border-radius: 5px;margin-left:auto;margin-right:auto;">
             <div style="height: 100%;">
                 <div class="easyui-tabs" data-options="fit:true,border:false">
@@ -449,8 +454,8 @@
                     </div>
                 </div>
             </div>
-            <div data-options="region:'south',border:false" style="height:250px">
-                <fieldset style="border-radius: 3px; height: 220px;">
+            <div data-options="region:'south',border:false" style="height:370px;">
+                <fieldset style="border-radius: 3px; height: 220px;margin-top:10px;">
                     <legend>表达式</legend>
                     <table style="height: 100px;">
                         <tbody>
@@ -688,6 +693,15 @@
                     <div>
                     </div>
                 </div>
+                <div style="height:120px;">
+                    <script type="text/javascript">
+                        /*760*90 创建于 2015-09-16*/
+                        var cpro_id = "u2313508";
+                    </script>
+                    <script src="http://cpro.baidustatic.com/cpro/ui/c.js" type="text/javascript"></script>
+                </div>
+
+
             </div>
             <div>
             </div>
@@ -695,5 +709,14 @@
         <div id="footer">
 		在线工具 由 <a href="http://yanweidie.cnblogs.com/" target="_blank">焰尾迭</a> 所有 | <a href="http://wpa.qq.com/msgrd?v=3&amp;uin=353166224&amp;site=qq&amp;menu=yes" target="_blank"><img title="欢迎与我联系" align="absmiddle" alt="欢迎与我联系" src="http://wpa.qq.com/pa?p=2:272657997:41 &amp;r=0.30709030851721764" border="0"></a> |Email:<a href="mailto:353166224@qq.com">353166224@qq.com</a> |<a href="http://www.cnblogs.com/yanweidie/p/3537144.html" target="_blank">意见反馈</a> | <a href="http://www.miitbeian.gov.cn/" target="_blank">鄂ICP备14000498号-1</a> | <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://"); document.write(unescape("%3Cspan id='cnzz_stat_icon_1256338874'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s11.cnzz.com/stat.php%3Fid%3D1256338874%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));</script>
         </div>
+        <script>
+                var _hmt = _hmt || [];
+                (function () {
+                    var hm = document.createElement("script");
+                    hm.src = "//hm.baidu.com/hm.js?5899414e240ca9ace8ece3a0b4620b65";
+                    var s = document.getElementsByTagName("script")[0];
+                    s.parentNode.insertBefore(hm, s);
+                })();
+       </script>
 </body>
 </html>
